[package]
name = "bevy_ui_borders"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["bevy", "texture", "graphics", "ui", "games"]
categories = ["game-development", "graphics", "gui"]
repository = "https://github.com/ickshonpe/bevy_ui_borders"
readme = "README.md"
description = "Bevy UI borders plugin"

[dependencies.bevy]
version = "0.9"
default_features= false
features = ["render"]

[dev-dependencies]
bevy = "0.9"
